--- a/easyplayer/src/main/AndroidManifest.xml
+++ b/easyplayer/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 
     package="com.zjn.easyplayer">
 
-    <application android:allowBackup="true" android:label="@string/app_name"
+    <application android:allowBackup="true"
+        android:label="@string/app_name"
         android:supportsRtl="true">
 
     </application>
